import type { Category } from '@/features/wardrobe/types';

/**
 * Persisted outfit record from the `outfits` table.
 * `item_ids` references wardrobe_items; `thumbnail_path` is a composite
 * image generated by POST /api/outfits/generate-thumbnail.
 */
export interface Outfit {
  id: string;
  user_id: string;
  name: string | null;
  item_ids: string[];
  thumbnail_path: string | null;
  created_at: string;
  updated_at: string;
}

export interface OutfitItem {
  id: string;
  name: string;
  category: Category;
  image_path: string | null;
}

export interface OutfitCreateInput {
  name?: string;
  item_ids: string[];
}

export interface OutfitUpdateInput {
  name?: string;
  item_ids?: string[];
}

/**
 * Named positions on the outfit canvas where garments can be placed.
 * "top" and "bottom" are singular concepts but "top" supports multiple
 * layered items (e.g. a shirt + jacket). Accessories are split into
 * left/right rails to allow spatial distribution on the canvas.
 */
export type OutfitSlot = 'top' | 'bottom' | 'shoes' | 'accessoriesLeft' | 'accessoriesRight';

/**
 * Canvas state shape. Top and accessory slots hold arrays to support
 * layering (up to 2 tops, up to 3 accessories per rail). Bottom and
 * shoes are single-item slots. Layer visibility is controlled by
 * separate index state in the store (topLayerIndex, etc.).
 */
export interface OutfitCanvasState {
  top: OutfitItem[];
  bottom: OutfitItem | null;
  shoes: OutfitItem | null;
  accessoriesLeft: OutfitItem[];
  accessoriesRight: OutfitItem[];
}

export const SLOT_ORDER: OutfitSlot[] = [
  'top',
  'bottom',
  'shoes',
  'accessoriesLeft',
  'accessoriesRight',
];

export const SLOT_LABELS: Record<OutfitSlot, string> = {
  top: 'Top',
  bottom: 'Bottoms',
  shoes: 'Shoes',
  accessoriesLeft: 'Accessories',
  accessoriesRight: 'Accessories',
};

/**
 * Maps each canvas slot to the wardrobe categories it accepts.
 * The "top" slot accepts tops, dresses, and outerwear — this is why
 * the `loadOutfit` store action routes dresses into the top array.
 */
export const SLOT_CATEGORIES: Record<OutfitSlot, Category[]> = {
  top: ['tops', 'dresses', 'outerwear'],
  bottom: ['bottoms'],
  shoes: ['shoes'],
  accessoriesLeft: ['accessories'],
  accessoriesRight: ['accessories'],
};

/**
 * High-level category groupings used in the wardrobe panel's tab navigation.
 * These group multiple wardrobe `Category` values under a single browsing tab
 * (e.g. "top" groups tops, dresses, and outerwear).
 */
export type MainCategory = 'top' | 'bottoms' | 'shoes' | 'accessories';

export type SubCategory = string;

export const MAIN_CATEGORIES: MainCategory[] = ['top', 'bottoms', 'shoes', 'accessories'];

export const MAIN_CATEGORY_LABELS: Record<MainCategory, string> = {
  top: 'Tops',
  bottoms: 'Bottoms',
  shoes: 'Shoes',
  accessories: 'Accessories',
};

export const SUB_CATEGORIES: Record<MainCategory, SubCategory[]> = {
  top: ['t-shirts', 'tank-tops', 'dresses'],
  bottoms: ['jeans', 'dress-pants'],
  shoes: ['shoes'],
  accessories: ['hats', 'jewelry', 'bags', 'watches', 'sunglasses', 'other'],
};
