@startuml seamless_class_diagram

!theme plain
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

title Seamless Application - UML Class Diagram

' External Libraries
package "External Libraries" {
    abstract class BaseModel <<pydantic>> {
    }
    abstract class BaseSettings <<pydantic_settings>> {
    }
}

' ============================================
' BACKEND CLASSES
' ============================================
package "Backend (Python)" {
    
    ' Configuration
    class Settings {
        + supabase_url: str
        + supabase_secret_key: str
        + fal_api_key: str
        + gemini_api_key: str
    }
    Settings --|> BaseSettings
    
    ' Services
    class GeminiClient {
        + model: GenerativeModel
        + __init__()
        + analyze_clothing_image(image_data: bytes, mime_type: str): Dict[str, Any]
        + validate_category(category: str): str
        + validate_seasons(seasons: List[str]): List[str]
    }
    
    class FalClient {
        + __init__()
        + generate_image(image_url: str, prompt: str): dict
        + remove_background(image_url: str): str
    }
    
    GeminiClient ..> Settings : <<depends on>>
    FalClient ..> Settings : <<depends on>>
    
    ' Request/Response Models
    package "API Models" {
        class GenerateAvatarRequest {
            + user_id: str
        }
        
        class WardrobeItem {
            + name: str
            + category: str
            + labels: Optional[List[str]]
            + colors: Optional[List[str]]
            + seasons: Optional[List[str]]
        }
        
        class WardrobeItemResponse {
            + id: str
            + user_id: str
            + name: str
            + category: str
            + image_path: Optional[str]
            + labels: List[str]
            + colors: List[str]
            + seasons: List[str]
            + is_inspiration: bool
            + is_template: bool
            + created_at: str
            + updated_at: str
        }
        
        class UpdateWardrobeItem {
            + name: Optional[str]
            + category: Optional[str]
            + labels: Optional[List[str]]
            + colors: Optional[List[str]]
            + seasons: Optional[List[str]]
        }
        
        class RemoveBackgroundRequest {
            + image_url: str
        }
        
        class RemoveBackgroundResponse {
            + processed_image_url: str
            + storage_path: str
        }
        
        class AnalyzeImageResponse {
            + suggested_name: str
            + suggested_category: str
            + colors: List[str]
            + seasons: List[str]
            + tags: List[str]
            + style: List[str]
            + material_guess: str
            + confidence: str
        }
        
        class Outfit {
            + id: str
            + user_id: str
            + name: Optional[str]
            + item_ids: List[str]
            + thumbnail_path: Optional[str]
            + created_at: str
            + updated_at: str
        }
        
        class OutfitCreate {
            + name: Optional[str]
            + item_ids: List[str]
        }
        
        class OutfitUpdate {
            + name: Optional[str]
            + item_ids: Optional[List[str]]
        }
        
        ' Inheritance from BaseModel
        GenerateAvatarRequest --|> BaseModel
        WardrobeItem --|> BaseModel
        WardrobeItemResponse --|> BaseModel
        UpdateWardrobeItem --|> BaseModel
        RemoveBackgroundRequest --|> BaseModel
        RemoveBackgroundResponse --|> BaseModel
        AnalyzeImageResponse --|> BaseModel
        Outfit --|> BaseModel
        OutfitCreate --|> BaseModel
        OutfitUpdate --|> BaseModel
    }
}

' ============================================
' FRONTEND CLASSES
' ============================================
package "Frontend (TypeScript)" {
    
    ' Main API Client Class
    class ApiClient {
        - baseUrl: string
        + constructor(baseUrl: string)
        - getAuthToken(): Promise<string | null>
        - request<T>(endpoint: string, options?: RequestOptions): Promise<T>
        + get<T>(endpoint: string, options?: RequestOptions): Promise<T>
        + post<T>(endpoint: string, body?: unknown, options?: RequestOptions): Promise<T>
        + put<T>(endpoint: string, body?: unknown, options?: RequestOptions): Promise<T>
        + delete<T>(endpoint: string, options?: RequestOptions): Promise<T>
    }
    
    package "Auth Types" {
        interface AuthUser {
            + id: string
            + email: string
        }
        
        interface LoginFormData {
            + email: string
            + password: string
        }
        
        interface SignupFormData {
            + email: string
            + password: string
            + confirmPassword: string
        }
    }
    
    package "Wardrobe Types" {
        interface WardrobeItemFE <<WardrobeItem>> {
            + id: string
            + user_id: string
            + name: string
            + category: Category
            + image_path: string | null
            + labels: string[]
            + colors: string[]
            + seasons: string[]
            + is_inspiration: boolean
            + is_template: boolean
            + created_at: string
            + updated_at: string
        }
        
        interface CreateWardrobeItemInput {
            + name: string
            + category: Category
            + labels?: string[]
            + colors?: string[]
            + seasons?: string[]
            + image?: File
            + imagePath?: string
        }
        
        interface UpdateWardrobeItemInput {
            + name?: string
            + category?: Category
            + labels?: string[]
            + colors?: string[]
            + seasons?: string[]
        }
        
        interface WardrobeFilters {
            + category?: Category
            + search?: string
            + colors?: string[]
            + seasons?: Season[]
        }
        
        interface AIAnalysisResult {
            + suggested_name: string
            + suggested_category: string
            + colors: string[]
            + seasons: string[]
            + tags: string[]
            + style: string[]
            + material_guess: string
            + confidence: string
        }
    }
    
    package "Outfit Types" {
        interface OutfitFE <<Outfit>> {
            + id: string
            + user_id: string
            + name: string | null
            + item_ids: string[]
            + thumbnail_path: string | null
            + created_at: string
            + updated_at: string
        }
        
        interface OutfitItem {
            + id: string
            + name: string
            + category: Category
            + image_path: string | null
        }
        
        interface OutfitCanvasState {
            + top: OutfitItem[]
            + bottom: OutfitItem | null
            + shoes: OutfitItem | null
            + accessoriesLeft: OutfitItem[]
            + accessoriesRight: OutfitItem[]
        }
        
        interface OutfitCreateInput {
            + name?: string
            + item_ids: string[]
        }
        
        interface OutfitUpdateInput {
            + name?: string
            + item_ids?: string[]
        }
    }
    
    package "Profile Types" {
        interface Profile {
            + id: string
            + display_name: string | null
            + onboarding_completed: boolean
            + tutorial_completed: boolean
            + created_at: string
            + updated_at: string
        }
        
        interface Avatar {
            + id: string
            + user_id: string
            + original_photo_path: string | null
            + model_canvas_path: string | null
            + model_status: 'pending' | 'processing' | 'ready' | 'failed'
            + is_active: boolean
            + created_at: string
            + updated_at: string
        }
    }
    
    package "API Client Types" {
        interface RequestOptions {
            + body?: unknown
        }
        
        interface ApiError {
            + status: number
            + message: string
        }
    }
    
    ' Type Aliases (shown as notes)
    note as TypeAliases
        Type Aliases:
        Category = 'tops' | 'bottoms' | 'dresses' | 
                   'shoes' | 'accessories' | 'outerwear'
        Season = 'spring' | 'summer' | 'fall' | 'winter'
        OutfitSlot = 'top' | 'bottom' | 'shoes' | 
                     'accessoriesLeft' | 'accessoriesRight'
    end note
}

' ============================================
' RELATIONSHIPS
' ============================================

' Backend to Frontend Mapping (dependencies)
WardrobeItemResponse ..> WardrobeItemFE : <<maps to>>
AnalyzeImageResponse ..> AIAnalysisResult : <<maps to>>
Outfit ..> OutfitFE : <<maps to>>
OutfitCreate ..> OutfitCreateInput : <<matches>>
OutfitUpdate ..> OutfitUpdateInput : <<matches>>
UpdateWardrobeItem ..> UpdateWardrobeItemInput : <<matches>>

' Composition relationships
OutfitCanvasState *-- OutfitItem : contains

' Aggregation relationships
OutfitFE o-- WardrobeItemFE : references via item_ids

' Dependencies
CreateWardrobeItemInput ..> WardrobeItemFE : <<creates>>
UpdateWardrobeItemInput ..> WardrobeItemFE : <<updates>>
OutfitCreateInput ..> OutfitFE : <<creates>>
OutfitUpdateInput ..> OutfitFE : <<updates>>
ApiClient ..> AuthUser : <<uses>>
RequestOptions ..> ApiClient : <<used by>>
ApiError ..> ApiClient : <<throws>>

@enduml